@@ -1,6 +1,7 @@
 0.2.0
 -----
 
+* Table.compute implemented. (#31)
 * Table.filter and Table.reject now take funcs. (#24)
 * Column.count implemented.
 * Column.counts implemented. (#8)
